==> MiSTle-Dev/FPGA-Companion/src/esp32/mcu_hw.c <==
#include <freertos/FreeRTOS.h>
#include <freertos/task.h>
#include <freertos/semphr.h>
#include <freertos/timers.h>
#include <freertos/queue.h>
#define ENABLE_WIFI
#include "../hidparser.h"
#include "../debug.h"
#include "../mcu_hw.h"
#include "../hid.h"
#include "../config.h"
#include "../sysctrl.h"
#include "driver/uart.h"
#define USB_ERROR_CHECK(a) (a)
#include "usb/usb_host.h"
#include "usb/hid_host.h"

static void irq_handler(void *) {
  // debugf("IRQ");
  
  // Disable interrupt. It will be re-enabled by the com task
  gpio_intr_disable(PIN_NUM_IRQ);

  if(com_task_handle) {    
    BaseType_t xHigherPriorityTaskWoken = pdFALSE;
    vTaskNotifyGiveFromISR( com_task_handle, &xHigherPriorityTaskWoken );
    portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
  }
}

void mcu_hw_spi_init(void) {
  debugf("Initializing SPI");

  sem = xSemaphoreCreateMutex();

  debugf("  MISO = GPIO%d", PIN_NUM_MISO);
  debugf("  SCK  = GPIO%d", PIN_NUM_CLK);
  debugf("  MOSI = GPIO%d", PIN_NUM_MOSI);
  
  spi_bus_config_t buscfg = {
     .miso_io_num = PIN_NUM_MISO,
     .mosi_io_num = PIN_NUM_MOSI,
     .sclk_io_num = PIN_NUM_CLK,
     .quadwp_io_num = -1,
     .quadhd_io_num = -1,
     .max_transfer_sz = 32
  };
  
  spi_bus_initialize(SPI2_HOST, &buscfg, SPI_DMA_CH_AUTO);

  spi_device_interface_config_t devcfg = {
     .clock_speed_hz = 20 * 1000 * 1000,      // 20 MHz
     .mode = 1,                               // SPI mode 1
     .spics_io_num = -1,
     .command_bits = 0,                       // no command, address or dummy bits since we
     .address_bits = 0,                       // are tranferring single bytes
     .dummy_bits = 0,     
     .queue_size = 7,                         // We want to be able to queue 7 transactions at a time
  };
  
  spi_bus_add_device(SPI2_HOST, &devcfg, &spi);

  // Chip select is active-low, so we'll initialise it to a driven-high state
  debugf("  CSn  = GPIO%d", PIN_NUM_CS);
  gpio_set_direction(PIN_NUM_CS, GPIO_MODE_OUTPUT);
  gpio_set_level(PIN_NUM_CS, 1);
 
  // The interruput input isn't strictly part of the SPi
  // The interrupt is active low
  debugf("  IRQn = GPIO%d", PIN_NUM_IRQ);
  gpio_set_pull_mode(PIN_NUM_IRQ, GPIO_PULLUP_ONLY);
  gpio_set_direction(PIN_NUM_IRQ, GPIO_MODE_INPUT);  
  gpio_install_isr_service(ESP_INTR_FLAG_LEVEL1);
  gpio_isr_handler_add(PIN_NUM_IRQ, irq_handler, NULL);
  gpio_set_intr_type(PIN_NUM_IRQ, GPIO_INTR_LOW_LEVEL);
}

void mcu_hw_irq_ack(void) {
  // re-enable the interrupt since it was now serviced outside the irq handler
  gpio_intr_enable(PIN_NUM_IRQ);
}

void mcu_hw_spi_begin() {
  xSemaphoreTake(sem, 0xffffffffUL);      // wait forever
  gpio_set_level(PIN_NUM_CS, 0);  
}

void mcu_hw_spi_end() {
  gpio_set_level(PIN_NUM_CS, 1);
  xSemaphoreGive(sem);
}

unsigned char mcu_hw_spi_tx_u08(unsigned char b) {
  unsigned char retval = 0;

  spi_transaction_t trans = {
    .cmd = 0,
    .addr = 0,
    .length = 8,
    .flags = SPI_TRANS_USE_TXDATA,
    .tx_data = { [0] = b },
    .rx_buffer = &retval
  };

  if(spi_device_polling_transmit(spi, &trans) != ESP_OK)
    debugf("SPI failed");
  
  // debugf("SPI(%d)", b);
  return retval;
}

void mcu_hw_wifi_init(void) {
  // Initialize NVS
  esp_err_t ret = nvs_flash_init();
  if (ret == ESP_ERR_NVS_NO_FREE_PAGES ||
      ret == ESP_ERR_NVS_NEW_VERSION_FOUND) {
    debugf("Initializing NVS");
    nvs_flash_erase();
    ret = nvs_flash_init();
  }
  
  esp_netif_init();
  esp_event_loop_create_default();
  esp_netif_t *sta_netif = esp_netif_create_default_wifi_sta();
  assert(sta_netif);
  
  wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
  esp_wifi_init(&cfg);
  
  esp_wifi_set_mode(WIFI_MODE_STA);
  esp_wifi_start();
  
  esp_event_handler_instance_t instance_any_id;
  esp_event_handler_instance_t instance_got_ip;
  esp_event_handler_instance_register(WIFI_EVENT,
				      ESP_EVENT_ANY_ID,
				      &event_handler,
				      NULL,
				      &instance_any_id);
  esp_event_handler_instance_register(IP_EVENT,
				      IP_EVENT_STA_GOT_IP,
				      &event_handler,
				      NULL,
				      &instance_got_ip);
}

void mcu_hw_wifi_scan(void) {
  at_wifi_puts("Scanning...\r\n");
  
  memset(ap_info, 0, sizeof(ap_info));
  debugf("Max AP number ap_info can hold = %u", number);

  // do a blocking scan
  esp_wifi_scan_start(NULL, true);

  uint16_t ap_count = 0;
  esp_wifi_scan_get_ap_num(&ap_count);
  esp_wifi_scan_get_ap_records(&number, ap_info);

  debugf("Total APs scanned = %u, actual AP number ap_info holds = %u", ap_count, number);
  for (int i = 0; i < number; i++) {
    char str[64];
    
    debugf("SSID %s, RSSI %d, CH %d, %s", ap_info[i].ssid, ap_info[i].rssi,
	   ap_info[i].primary, auth_mode_str(ap_info[i].authmode));

    snprintf(str, 64, "SSID %s, RSSI %d, CH %d, %s\r\n", ap_info[i].ssid, ap_info[i].rssi,
	    ap_info[i].primary, auth_mode_str(ap_info[i].authmode));

    at_wifi_puts(str);
  }
}

void mcu_hw_wifi_connect(char *ssid, char *key) {
  debugf("connecting '%s' '%s'", ssid, key);

  static wifi_config_t wifi_configuration;
  strcpy((char*)wifi_configuration.sta.ssid,ssid);
  strcpy((char*)wifi_configuration.sta.password,key);
  esp_wifi_set_config(ESP_IF_WIFI_STA, &wifi_configuration);
  
  s_retry_num = 0;
  at_wifi_puts("Connecting");
  esp_wifi_connect(); //connect with saved ssid and pass
}

void mcu_hw_tcp_connect(char *ip, int port) {
  int addr_family = 0;
  int ip_protocol = 0;

  debugf("connecting '%s' %d", ip, port);

  // disconnect any existing connection
  if(sock >= 0) {
    debugf("disconnecting previous connection");
    at_wifi_puts("Disconnecting existing connection\r\n");
    closesocket(sock);
    sock = -1;   
  }
  
  struct hostent *hp;
  hp = gethostbyname(ip);
  if(hp == NULL) {    
   debugf("Cannot resolve host");
   at_wifi_puts("Cannot resolve host\r\n");
   return;
  }

  if(hp->h_length != 4) {
    at_wifi_puts("Unexpected address length\r\n");
    return;
  }
  
  char buf[16];
  esp_ip4addr_ntoa((esp_ip4_addr_t*)(hp->h_addr_list[0]), buf, sizeof(buf));
  at_wifi_puts("Using address ");
  at_wifi_puts(buf);
  at_wifi_puts("\r\n");

  struct sockaddr_in dest_addr;
  memcpy(&dest_addr.sin_addr, hp->h_addr_list[0], 4);
  dest_addr.sin_family = AF_INET;
  dest_addr.sin_port = htons(port);
  addr_family = AF_INET;
  ip_protocol = IPPROTO_IP;

  sock = socket(addr_family, SOCK_STREAM, ip_protocol);
  if (sock < 0) {
    debugf("Unable to create socket: errno %d", errno);
    at_wifi_puts("Unable to create socket\r\n");
    return;
  }
  
  debugf("Socket created, connecting to %s:%d", ip, port);
  
  int err = connect(sock, (struct sockaddr *)&dest_addr, sizeof(dest_addr));
  if (err != 0) {
    debugf("Socket unable to connect: errno %d", errno);
    at_wifi_puts("Connection failed!\r\n");
    return;
  }
  debugf("Successfully connected");
  at_wifi_puts("Connected\r\n");

  // start a reader task for incoming data
  xTaskCreate(mcu_hw_tcp_reader_task, (char *)"tcp_reader_task", 2048, NULL, configMAX_PRIORITIES-10, NULL);
}

void mcu_hw_init(void) {
  printf("\r\n\r\n" LOGO "           FPGA Companion for ESP32-S2/S3\r\n\r\n");

  mcu_hw_spi_init();
  usb_init();
}
