==> MiSTle-Dev/FPGA-Companion/src/rp2040/mcu_hw.c <==
#include <FreeRTOS.h>
#include <task.h>
#include <semphr.h>
#include <timers.h>
#include <malloc.h>
#include "pico/stdlib.h"
#include <stdio.h>
#include "tusb.h"
#include "pico/multicore.h"
#include "hardware/clocks.h"
#include "hardware/flash.h"
#include "../debug.h"
#include "../config.h"
#include "../spi.h"
#include "../sysctrl.h"
#include "../at_wifi.h"
#include "../inifile.h"
#include "../mcu_hw.h"
#define ENABLE_WIFI
#define ENABLE_WIFI
#include "../jtag.h"
#include "./sdc_direct.h"
#define ENABLE_JTAG
#define PIN_JTAG_TDI  12   // pin 15, gpio 12
#define PIN_JTAG_TMS  13   // pin 16, gpio 13
#define PIN_JTAG_TDO  14   // pin 17, gpio 14
#define PIN_JTAG_TCK  15   // pin 18, gpio 15
#define PIN_nCFG      21   // pin 32, PIO21
#define PIN_MODE0     23   // pin 35, PIO23
#define PIN_MODE1     24   // pin 36, PIO24
#define SPI_RX_PIN     4
#define SPI_SCK_PIN    6
#define SPI_TX_PIN     7
#define SPI_CSN_PIN    5
#define SPI_IRQ_PIN    8
#define SPI_BUS     spi0
#define WS2812_PIN    16
#define SPI_RX_PIN   PICO_DEFAULT_SPI_RX_PIN
#define SPI_SCK_PIN  PICO_DEFAULT_SPI_SCK_PIN
#define SPI_TX_PIN   PICO_DEFAULT_SPI_TX_PIN
#define SPI_CSN_PIN  PICO_DEFAULT_SPI_CSN_PIN
#define SPI_IRQ_PIN  22
#define SPI_BUS      spi_default
#define LED_MOUSE_PIN    4
#define LED_KEYBOARD_PIN 5
#define LED_JOYSTICK_PIN 6
#include "ws2812.pio.h"
#include "tusb.h"
#include "../hid.h"
#include "../hidparser.h"
#include "tusb_option.h"
#include "tusb_config.h"

static void irq_handler(void) {
  if(gpio_get_irq_event_mask(SPI_IRQ_PIN) & GPIO_IRQ_LEVEL_LOW) {
    gpio_acknowledge_irq(SPI_IRQ_PIN, GPIO_IRQ_LEVEL_LOW);

    // Disable interrupt. It will be re-enabled by the com task
    gpio_set_irq_enabled(SPI_IRQ_PIN, GPIO_IRQ_LEVEL_LOW, false);
 
    if(com_task_handle) {
      BaseType_t xHigherPriorityTaskWoken = pdFALSE;
      vTaskNotifyGiveFromISR( com_task_handle, &xHigherPriorityTaskWoken );
      portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
    }
  }
}

void mcu_hw_spi_init(void) {
  debugf("Initializing SPI");

  sem = xSemaphoreCreateMutex();

  // init SPI at 20Mhz, mode 1
  spi_init(SPI_BUS, 20000000);
  spi_set_format(SPI_BUS, 8, SPI_CPOL_0, SPI_CPHA_1, SPI_MSB_FIRST);
  
  debugf("  MISO = %d", SPI_RX_PIN);
  gpio_set_function(SPI_RX_PIN, GPIO_FUNC_SPI);
  debugf("  SCK  = %d", SPI_SCK_PIN);
  gpio_set_function(SPI_SCK_PIN, GPIO_FUNC_SPI);
  debugf("  MOSI = %d", SPI_TX_PIN);
  gpio_set_function(SPI_TX_PIN, GPIO_FUNC_SPI);
  
  // Chip select is active-low, so we'll initialise it to a driven-high state
  debugf("  CSn  = %d", SPI_CSN_PIN);
  gpio_init(SPI_CSN_PIN);
  gpio_set_dir(SPI_CSN_PIN, GPIO_OUT);
  gpio_put(SPI_CSN_PIN, 1);

  // The interruput input isn't strictly part of the SPI
  // The interrupt is active low on GP22
  debugf("  IRQn = %d", SPI_IRQ_PIN);

  // set handler but not enable yet as the main task may not be ready
  gpio_init(SPI_IRQ_PIN);
  gpio_set_dir(SPI_IRQ_PIN, GPIO_IN);
  gpio_add_raw_irq_handler(SPI_IRQ_PIN, irq_handler);  
}

void mcu_hw_irq_ack(void) {
  static bool first = true;

  if(first) {
    debugf("enable IRQ");
    irq_set_enabled(IO_IRQ_BANK0, true);
    first = false;
  }
  //  else debugf("re-enable IRQ");
  
  // re-enable the interrupt since it was now serviced outside the irq handler
  gpio_set_irq_enabled(SPI_IRQ_PIN, GPIO_IRQ_LEVEL_LOW, 1); 
}

void mcu_hw_spi_begin() {
  xSemaphoreTake(sem, 0xffffffffUL);      // wait forever
  gpio_put(SPI_CSN_PIN, 0);  // Active low
}

void mcu_hw_spi_end() {
  gpio_put(SPI_CSN_PIN, 1);
  xSemaphoreGive(sem);
}

unsigned char mcu_hw_spi_tx_u08(unsigned char b) {
  unsigned char retval;
  spi_write_read_blocking(SPI_BUS, &b, &retval, 1);
  return retval;
}

void mcu_hw_wifi_scan(void) { }

static void mcu_hw_wifi_init(void) {
#ifdef PICO_RP2350
  debugf("Detected Pico2-W");
#else
  debugf("Detected Pico-W");
#endif
  
  if(cyw43_arch_init_with_country(CYW43_COUNTRY_GERMANY)) {
    debugf("WiFi failed to initialised");
    return;
  }
  debugf("WiFi initialised");
  wifi_state = WIFI_STATE_DISCONNECTED;
  
  cyw43_arch_enable_sta_mode();
  debugf("STA mode enabled");

  cyw43_wifi_pm(&cyw43_state, CYW43_PERFORMANCE_PM);

  TimerHandle_t led_timer_handle =
    xTimerCreate("LED timer (W)", pdMS_TO_TICKS(200), pdTRUE,
		 NULL, led_timer_w);
  xTimerStart(led_timer_handle, 0);
}

void mcu_hw_wifi_scan(void) {
  debugf("WiFi: Performing scan");
    
  cyw43_wifi_scan_options_t scan_options = {0};
  int err = cyw43_wifi_scan(&cyw43_state, &scan_options, NULL, scan_result);
  if(err) {
    at_wifi_puts("Scan failed\r\n");
    return;
  }

  at_wifi_puts("Scanning...\r\n");  

  while(cyw43_wifi_scan_active(&cyw43_state))
    vTaskDelay(pdMS_TO_TICKS(10));
  }

void mcu_hw_wifi_connect(char *ssid, char *key) {

  debugf("WiFI: connect to %s/%s", ssid, key);
  
  at_wifi_puts("Connecting...");
  if(cyw43_arch_wifi_connect_timeout_ms(ssid, key, CYW43_AUTH_WPA2_AES_PSK, 30000)) {
    at_wifi_puts("\r\nConnection failed!\r\n");
  } else {
    at_wifi_puts("\r\nConnected\r\n");
  }  
}

void mcu_hw_tcp_connect(char *host, int port) {
  static int lport;
  static ip_addr_t address;

  lport = port;
  debugf("connecting to %s %d", host, lport);
  
  cyw43_arch_lwip_begin();
  int err = dns_gethostbyname(host, &address, dns_found, &lport);
  cyw43_arch_lwip_end();

  if(err != ERR_OK && err != ERR_INPROGRESS) {
    debugf("DNS error");
    at_wifi_puts("Cannot resolve host\r\n");
    return;
  }

  if(err == ERR_OK)
    mcu_tcp_connect(&address, port);

  else if(err == ERR_INPROGRESS) 
    debugf("DNS in progress");
}

void mcu_hw_init(void) {
  // default 125MHz is not appropriate for PIO USB. Sysclock should be multiple of 12MHz.
  // some devices won't enumerate propery below ~16*12Mhz
  set_sys_clock_khz(16*12000, true);
  
  stdio_init_all();    // ... so stdio can adjust its bit rate
#if MISTLE_BOARD == 2
  // the waveshare mini does not support SWD and we thus use a simpler (slower) UART
  uart_set_baudrate(uart0, 460800);  
#else
  uart_set_baudrate(uart0, 921600);
#endif
  
#ifdef PICO_RP2350
  debugf( LOGO "        FPGA Companion for RP2350\r\n");
#else
  debugf( LOGO "        FPGA Companion for RP2040\r\n");
#endif

  uint8_t txbuf[4] = {0x9f};
  uint8_t rxbuf[4] = {0};
  flash_do_cmd(txbuf, rxbuf, 4);
  debugf("Flash manufacturer ID: %02x", rxbuf[1]);
  debugf("Flash memory type: %02x", rxbuf[2]);
  if(rxbuf[3] < 10)      debugf("Flash size: %d", 1 << rxbuf[3]);
  else if(rxbuf[3] < 20) debugf("Flash size: %dKB", 1 << (rxbuf[3]-10));
  else                   debugf("Flash size: %dMB", 1 << (rxbuf[3]-20));
  
#if CFG_TUH_RPI_PIO_USB == 0
  debugf("Using native USB");
#else
  debugf("USB D+/D- on GP%d and GP%d", PIO_USB_DP_PIN_DEFAULT, PIO_USB_DP_PIN_DEFAULT+1);
#endif

  mcu_hw_spi_init();

  // initialize the LED gpios
#ifdef LED_MOUSE_PIN
  debugf("LED MOUSE    = %d", LED_MOUSE_PIN);
  gpio_init(LED_MOUSE_PIN);
  gpio_set_dir(LED_MOUSE_PIN, GPIO_OUT);
  gpio_put(LED_MOUSE_PIN, 0);
#endif
#ifdef LED_KEYBOARD_PIN
  debugf("LED KEYBOARD = %d", LED_KEYBOARD_PIN);
  gpio_init(LED_KEYBOARD_PIN);
  gpio_set_dir(LED_KEYBOARD_PIN, GPIO_OUT);
  gpio_put(LED_KEYBOARD_PIN, 0);
#endif
#ifdef LED_JOYSTICK_PIN
  debugf("LED JOYSTICK = %d", LED_JOYSTICK_PIN);
  gpio_init(LED_JOYSTICK_PIN);
  gpio_set_dir(LED_JOYSTICK_PIN, GPIO_OUT);
  gpio_put(LED_JOYSTICK_PIN, 0);
#endif
  
  tuh_hid_set_default_protocol(HID_PROTOCOL_REPORT);
  //  tuh_init(BOARD_TUH_RHPORT);
  tusb_rhport_init_t host_init = {
    .role = TUSB_ROLE_HOST,
    .speed = TUSB_SPEED_AUTO
  };
  tusb_init(BOARD_TUH_RHPORT, &host_init);
  
#if MISTLE_BOARD == 4
  tusb_rhport_init_t dev_init = {
    .role = TUSB_ROLE_DEVICE,
    .speed = TUSB_SPEED_AUTO
  };
  tusb_init(BOARD_TUD_RHPORT, &dev_init);
#endif

  xTaskCreate(pio_usb_task, "usb_task", 2048, NULL, configMAX_PRIORITIES, NULL);

#ifdef WS2812_PIN
  uint offset = pio_add_program(pio0, &ws2812_program);  
  ws2812_program_init(pio0, 0, offset, WS2812_PIN, 800000, 0);

  TimerHandle_t led_timer_handle =
    xTimerCreate("LED timer", pdMS_TO_TICKS(200), pdTRUE, NULL, ws_led_timer);
  xTimerStart(led_timer_handle, 0);
#endif
  
#ifdef ENABLE_WIFI
  adc_init();
  adc_gpio_init(29);
  adc_select_input(3);

  uint16_t result = adc_read();
  debugf("ADC3 value: 0x%03x", result);
  is_pico_w = result < 0x100;

  if(!is_pico_w)
#endif
    {
#ifndef WS2812_PIN
      // prepare for using a regular led
      gpio_init(PICO_DEFAULT_LED_PIN);
      gpio_set_dir(PICO_DEFAULT_LED_PIN, 1);
      gpio_put(PICO_DEFAULT_LED_PIN, !PICO_DEFAULT_LED_PIN_INVERTED);
      
      TimerHandle_t led_timer_handle =
	xTimerCreate("LED timer", pdMS_TO_TICKS(200), pdTRUE, NULL, led_timer);
      xTimerStart(led_timer_handle, 0);
#endif
    }
#ifdef ENABLE_WIFI
  else
    xTaskCreate(wifi_task, (char *)"wifi_task", 2048, NULL, configMAX_PRIORITIES-10, NULL);  
#endif

  debugf("SDK heap total: %ld, free: %ld", getTotalHeap() ,getFreeHeap());
  debugf("FreeRTOS heap total: %u, free: %u", configTOTAL_HEAP_SIZE, xPortGetFreeHeapSize());

#ifdef ENABLE_JTAG
  mcu_hw_jtag_init();
#endif
}
